[gd_scene load_steps=2 format=3 uid="uid://bw4fquaypq4gx"]

[ext_resource type="Script" uid="uid://btf307wmolrpi" path="res://Scripts/StatusEffects/status_effect.gd" id="1_k0ay2"]

[node name="StatusEffect" type="Node3D"]
script = ExtResource("1_k0ay2")

[node name="DurationTimer" type="Timer" parent="."]

[node name="TickTimer" type="Timer" parent="."]

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
